# server/routes/posts.js
@@ -2,160 +2,116 @@ const express = require('express');
 const router = express.Router();
 
 // Подключаем модели
-const Posts_tags = require('../models/posts_tags.js');
-const Posts = require('../models/posts.js');
-const Tags = require('../models/tags.js');
-const Comments = require('../models/comments.js');
+const Post = require('../models/post.js');
+const Comment = require('../models/comment.js');
 
-// связываем модели (таблицы) через кросс-таблицу posts_tags отношение M:M
-Posts.belongsToMany(Tags, {
-    through: Posts_tags,
-    foreignKey: 'post_id',
-    otherKey: 'tag_id'
-});
-Tags.belongsToMany(Posts, {
-    through: Posts_tags,
-    foreignKey: 'tag_id',
-    otherKey: 'post_id'
-});
-
-// Связываем пост с комментами, отношение 1:M
-Posts.hasMany(Comments);
-
-// Реализуем методы роутера
-/*
-	(args) => {code...} - это стрелочная функция
-	arg => return true;
-*/
 router.get('/', (req, res) => {
-    Posts.findAll()
-        .then(rows => {
-            // status() поставит запросу код ответа еще до отправления
-            // т.е. с ответом пользователя еще можно работать
-            // .json(data) - преобразует ответ в формат json и проставляет для этого необходимые хедеры
-            res.status(200).json(rows)
-        })
-        .catch(e => {
-            // sendStatus - сразу отвечает клиенту кодом
+    // req.query - параметры после ?
+    Post.getAll(req.query, (err, posts) => {
+        if (err) return res.status(500).json(err);
+        if (posts) {
+            res.status(200).json(posts)
+        } else {
             res.sendStatus(500);
-            console.log(e)
-        })
+        }
+    })
+
 });
 
-// /:id - это типо запись с ид вот так posts/10 
 router.get('/:id', (req, res) => {
-    // req.params содержит параметры из URL которые в виде :id
-    // + перед значением для неявного преобразования в int
     const id = +req.params.id;
 
-    // находим одну запись с условием where
-    Posts.findOne({
-            where: {
-                id: id
-            },
-            include: {
-                model: Comments,
-                attributes: ['id', 'name', 'body', 'created', 'email'] // поля из comments
-            }
-        })
-        .then(rows => {
-            res.status(200).json(rows)
-        })
-        .catch(e => {
-            res.sendStatus(500);
-            console.log(e)
-        })
+    Post.get(id, (err, post) => {
+        if (err) return res.status(500).json(err);
+        if (post) {
+            res.status(200).json(post);
+        } else {
+            res.sendStatus(404);
+        }
+    })
+
 });
 
-// фильтр по тегу
-router.get('/filter/:tag', (req, res) => {
-    const tag = req.params.tag;
-
-    // находим одну запись с условием where у модели tags
-    Posts.findAll({
-            include: {
-                model: Tags,
-                where: {
-                    slug: tag
-                }
-            }
-        })
-        .then(rows => {
-            res.status(200).json(rows)
-        })
-        .catch(e => {
-            res.sendStatus(500);
-            console.log(e)
-        })
-});
 
 router.post('/', (req, res) => {
     // req.body содержит в себе тело запроса (именно переданные данные)
     const data = req.body;
 
-    // Данные приняли в формате json, поэтому их сразу можно откинуть в метод создания поста
-    Posts.create(data)
-        .then(rows => {
-            res.status(200).json(rows)
-        })
-        .catch(e => {
+    const post = new Post(data);
+    post.save((err, post) => {
+        if (err) return res.status(500).json(err);
+        if (post) {
+            res.status(200).json(post)
+        } else {
             res.sendStatus(500);
-            console.log(e)
-        })
+
+        }
+    });
+
 });
 
-// PUT и PATCH будут одинаковые т.к. метод update работает в обоих случаях
-router.put('/:id', (req, res) => {
-    const data = req.body;
-    const id = +req.params.id;
+router.post('/:id/comments', (req, res) => {
+    let data = req.body;
+    data.post_id = +req.params.id;
 
-    Posts.update(data, {
-            where: {
-                id: id
-            }
-        })
-        .then(rows => {
-            res.sendStatus(204); // 204 No Content
-        })
-        .catch(e => {
+    const comment = new Comment(data);
+
+    comment.save((err, comment) => {
+        if (err) return res.status(500).json(err);
+        if (comment) {
+            res.status(200).json(comment)
+        } else {
             res.sendStatus(500);
-            console.log(e);
-        })
+
+        }
+    })
+
+});
+
+router.put('/:id', (req, res) => {
+    let data = req.body;
+    data.id = +req.params.id;
+
+    const post = new Post(data);
+
+    post.update((err, post) => {
+        if (err) return res.sendStatus(400); // Bad Request
+        if (post) {
+            // post доступен, но отдаем 204
+            res.sendStatus(204); // 204 No Content
+        } else {
+            res.sendStatus(500);
+        }
+    });
+
 })
 
 router.patch('/:id', (req, res) => {
-    const data = req.body;
-    const id = +req.params.id;
+    let data = req.body;
+    data.id = +req.params.id;
 
-    Posts.update(data, {
-            where: {
-                id: id
-            }
-        })
-        .then(rows => {
+    const post = new Post(data);
+
+    post.patch((err, post) => {
+        if (err) return res.sendStatus(400); // Bad Request
+        if (post) {
+            // post доступен, но отдаем 204
             res.sendStatus(204); // 204 No Content
-        })
-        .catch(e => {
+        } else {
             res.sendStatus(500);
-            console.log(e);
-        })
+
+        }
+    });
 })
 
 router.delete('/:id', (req, res) => {
     const id = +req.params.id;
 
-    Posts.destroy({
-            where: {
-                id: id
-            }
-        })
-        .then(rows => {
-            res.sendStatus(204); // 204 No Content
-        })
-        .catch(e => {
-            res.sendStatus(500);
-            console.log(e);
-        })
+    Post.delete(id, (err) => {
+        if (err) return res.status(500).json(err);
+        res.sendStatus(204);
+    })
+
 })
 
 module.exports = router;
